# brot

./: .gitignore  CMakeLists.txt  LICENSE  build.xml  example.bom.brot  readme.md
brot-material/: build.xml  manifest.mf
brot-material/nbproject/: build-impl.xml  genfiles.properties  project.xml
brot-material/src/org/brot/material/: Bundle.properties
brot-material/src/org/brot/material/api/: BrotMaterial.java
brot-material/src/org/brot/material/bits/: PinLookupProvider.java
brot-material/src/org/brot/material/filetype/: BrotMaterialDataObject.java  BrotMaterialTemplate.xml  BrotMaterialVisualElement.form  BrotMaterialVisualElement.java  package-info.java
brot-material/src/org/brot/material/parser/: BrotMaterialParser.java
brot-material/src/org/brot/material/project/: Bundle.properties  (+1 more)
brot-project/: build.xml  manifest.mf
brot-project/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
brot-project/src/org/brot/project/: BrotLogicalViewProvider.java  BrotProject.java  BrotProjectFactory.java  BrotProjectInfo.java  BrotProjectNode.java  Bundle.properties
brot-xml-utils/: build.xml  manifest.mf
brot-xml-utils/nbproject/: build-impl.xml  genfiles.properties  project.xml
brot-xml-utils/src/org/brot/xml/: Bundle.properties  LookupProviderAnnotationProcessor.java
examples/: .gitignore  Makefile  oscillator.bom.brot  oscillator.comp.brot  oscillator.drill.brot  oscillator.net.brot
inc/: parser.hpp  printer.hpp
inc/brot/: composer.hpp  iostream.hpp  parser.hpp  units.hpp  utils.hpp
nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties  project.xml
src/: cat.cpp  expand.cpp  gerber-drill.cpp  jlcpcb-bom.cpp  jlcpcb-pnp.cpp  units.cpp
(+9 files in other folders)
